# project-specify

./: ARCHITECTURE-ANALYSIS.md  CONTRIBUTING.md  PROJECT-SPECIFY-ASSESSMENT.md  README.md  REPLICATION_GUIDE.md  pyproject.toml
.claude/commands/: validator-walkthrough.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  release.yml  test.yml
.specify/context/: mcp-servers.md  project-context.json
docs/: mcp-setup.md  monorepo-guide.md  windows-setup.md
scripts/bash/: update-agent-context.sh
src/specify_cli/: __init__.py  _version.py  config.py  errors.py  file_operations.py  git_operations.py  github_api.py  mcp_discovery.py  monorepo.py  project_mode.py  symlink_manager.py  system_tools.py  template_download.py  ui.py
src/specify_cli/agents/bob/commands/: speckit.plan.md  speckit.research.md
src/specify_cli/agents/claude/commands/: speckit.constitution.md  speckit.plan.md  speckit.research.md  speckit.scan.md  speckit.specify.md
src/specify_cli/agents/cursor-agent/commands/: speckit.constitution.md  speckit.specify.md
src/specify_cli/commands/: __init__.py  check_cmd.py  discover_cmd.py  init_cmd.py  version_cmd.py
src/specify_cli/scripts/bash/: create-research-structure.sh  detect-project-mode.sh
src/specify_cli/templates/: implementation-plan-template.md  project-plan-template.md
templates/: project-spec-template.md
templates/research-seeds/constraints/: compliance-research.seed.md  performance-research.seed.md  security-research.seed.md
templates/research-seeds/domain/: business-rules-research.seed.md  domain-research.seed.md  workflow-research.seed.md
templates/research-seeds/technical/: architecture-research.seed.md  data-research.seed.md  tech-stack-research.seed.md
templates/research-seeds/user/: journey-maps-research.seed.md  personas-research.seed.md  user-research.seed.md
tests/: conftest.py  integration_test.sh  test_cli_commands.py  test_error_handling.py  test_git_operations.py  test_mcp_discovery.py  test_monorepo.py  test_symlinks.py  test_template_operations.py  test_windows_support.py
tests/fixtures/mcp/: claude_code_config.json  claude_desktop_config.json  config_with_env_vars.json  cursor_config.json  project_local_servers.json
tests/fixtures/monorepo/: Cargo.toml  lerna.json  nx.json  package-npm-workspaces.json  package-yarn-workspaces.json  turbo.json
tmp/: README.md  __main__.example.py  discover-mcp.sh  mcp_discovery.py  project-specify-implementation-guide.md  pyproject.toml.example  quick-start-checklist.md  speckit.plan.md  speckit.scan.md  symlink_manager.py
